--- a/unpackaged/main/default/translations/ko.translation-meta.xml
+++ b/unpackaged/main/default/translations/ko.translation-meta.xml
@@ -137,6 +137,14 @@
         <name>Order_Last_Modified_Date_Filter</name>
     </customLabels>
     <customLabels>
+        <label><!-- R360 Integration User Name --></label>
+        <name>R360_Integration_User_Name</name>
+    </customLabels>
+    <customLabels>
+        <label><!-- RClient_comboVersionUpdateDate --></label>
+        <name>RClient_comboVersionUpdateDate</name>
+    </customLabels>
+    <customLabels>
         <label><!-- SOM_Confirmation Resend Transactional Email --></label>
         <name>SOM_Confirmation_Resend_Transactional_Email</name>
     </customLabels>
